# deali_ifpack_boomerAMG

./: foo.cc
BoomerAMG_solver/: CMakeLists.txt  boomerAMG_proj.conf
BoomerAMG_solver/source/: BoomerAMG_solver.cc  BoomerAMG_solver.h  CMakeLists.txt
advection_difussion_supg/: CMakeLists.txt
advection_difussion_supg/source/: CMakeLists.txt  supg.cc
diffusion_amg_preconditioner/: CMakeLists.txt
diffusion_amg_preconditioner/source/: CMakeLists.txt  diffusion_amg_preconditioner.cc
final_report/: final_report.tex
simple_advection/: CMakeLists.txt
simple_advection/source/: CMakeLists.txt  simple_advection.cc
simple_diffusion/: CMakeLists.txt
simple_diffusion/source/: CMakeLists.txt  amg_elliptic.cc
